package com.company;

public interface Argument {
    int oblicz();
}
