@startuml

title __PO_L5_Z2's Class Diagram__\n

  namespace com.company {
    interface com.company.Argument {
    }
  }
  

  namespace com.company {
    class com.company.Dodaj {
    }
  }
  

  namespace com.company {
    class com.company.Dzielenie {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Mnozenie {
    }
  }
  

  namespace com.company {
    class com.company.Odejmowanie {
    }
  }
  

  namespace com.company {
    class com.company.Stala {
    }
  }
  

  namespace com.company {
    abstract class com.company.Wyrazenie {
    }
  }
  

  namespace com.company {
    class com.company.Zmienna {
    }
  }
  

  com.company.Dodaj -up-|> com.company.Wyrazenie
  com.company.Dzielenie -up-|> com.company.Wyrazenie
  com.company.Mnozenie -up-|> com.company.Wyrazenie
  com.company.Odejmowanie -up-|> com.company.Wyrazenie
  com.company.Stala .up.|> com.company.Argument
  com.company.Wyrazenie .up.|> com.company.Argument
  com.company.Wyrazenie o-- com.company.Argument : argument1
  com.company.Wyrazenie o-- com.company.Argument : argument2
  com.company.Zmienna .up.|> com.company.Argument


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
